Add level for assessment on the report.